Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -19,7 +19,7 @@
     "Write your answer below this line: \n",
     "_______________________________________________________________________________________________________________________________\n",
     "\n",
-    "SQL is an implementaion\n",
+    "SQL is \n",
     "\n",
     "\n",
     "\n",
