--- a/index.ipynb
+++ b/index.ipynb
@@ -19,7 +19,7 @@
     "Write your answer below this line: \n",
     "_______________________________________________________________________________________________________________________________\n",
     "\n",
-    "SQL databases are relational databases, while NoSQL da\n",
+    "SQL databases are relational databases, while NoSQL databases are not relational databases. Whic\n",
     "\n",
     "\n",
     "\n",
