--- a/index.ipynb
+++ b/index.ipynb
@@ -19,7 +19,7 @@
     "Write your answer below this line: \n",
     "_______________________________________________________________________________________________________________________________\n",
     "\n",
-    "SQL databases are relational databases, while NoSQL databases are not relational databases. Whether SQL or NoSQL databases are better will depend on the data being stored and t\n",
+    "SQL databases are relational databases, while NoSQL databases are not relational databases. Whether SQL or NoSQL databases are better will depend on the data being stored and how the data will be accessed.\n",
     "\n",
     "\n",
     "\n",
