--- a/index.ipynb
+++ b/index.ipynb
@@ -32,7 +32,7 @@
     "Write your answer below this line: \n",
     "_______________________________________________________________________________________________________________________________\n",
     "\n",
-    "\n",
+    "NoSQL databases are preferrable to SQL\n",
     "\n",
     "\n",
     "\n",
