--- a/index.ipynb
+++ b/index.ipynb
@@ -32,7 +32,7 @@
     "Write your answer below this line: \n",
     "_______________________________________________________________________________________________________________________________\n",
     "\n",
-    "NoSQL databases are preferrable to SQL databases when, for example, the data being stored does not fit well into table format.\n",
+    "NoSQL databases are preferrable to SQL databases when, for example, the data being stored does not fit well into table format. An example of that \n",
     "\n",
     "\n",
     "\n",
