Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "Write your answer below this line: \n",
     "_______________________________________________________________________________________________________________________________\n",
-    "MongoDB is a document store database where the \n",
+    "MongoDB is a document store database where the documents are represented as sets of key-v\n",
     "\n",
     "\n",
     "\n",
