--- a/index.ipynb
+++ b/index.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "Write your answer below this line: \n",
     "_______________________________________________________________________________________________________________________________\n",
-    "MongoDB is a document store database where the documents are represented as sets of key-v\n",
+    "MongoDB is a document store database where the documents are represented as sets of key-value pairs, with the data being stored in the values. To \n",
     "\n",
     "\n",
     "\n",
