--- a/index.ipynb
+++ b/index.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "Write your answer below this line: \n",
     "_______________________________________________________________________________________________________________________________\n",
-    "MongoDB is a document store database where the documents are represented as sets of key-value pairs, with the data being stored in the values. To access the data, you need to know what key to look for\n",
+    "MongoDB is a document store database where the documents are represented as sets of key-value pairs, with the data being stored in the values. To access the data, you need to know what key to look for, which is information that would usually be provided in \n",
     "\n",
     "\n",
     "\n",
