--- a/index.ipynb
+++ b/index.ipynb
@@ -58,7 +58,7 @@
     "Write your answer below this line: \n",
     "_______________________________________________________________________________________________________________________________\n",
     "\n",
-    "When data gets large, it becomes necessary to store\n",
+    "When data gets large, it becomes necessary and advantageous to store data across multiple compute\n",
     "\n",
     "\n",
     "\n",
