Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -58,7 +58,7 @@
     "Write your answer below this line: \n",
     "_______________________________________________________________________________________________________________________________\n",
     "\n",
-    "When data gets large, it becomes necessary and also sometimes advantageous to store data across multiple computers (or \"servers\"). Calculations that are performed on data sets that are distributed across multiple computers need to, in the end, be combined to compute a final result (often called a \"reduce\" operation).\n",
+    "When data gets large, it becomes necessary and also sometimes advantageous to store data across multiple computers (or \"servers\"). Calculations that are performed on data sets that are distributed across multiple computers need to, in the end, be combined to compute a final result (often referred to as \"reduce\" operation).\n",
     "\n",
     "\n",
     "\n",
