Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -58,7 +58,7 @@
     "Write your answer below this line: \n",
     "_______________________________________________________________________________________________________________________________\n",
     "\n",
-    "When data gets large, it becomes necessary and also sometimes advantageous to store data across multiple computers (or \"servers\"). Calculations that are performed on data sets that are distributed across multiple computers need to, in the end, be combined to compute a final result (where this final combination of results is often referred to as \"reduce\" operation). If one or more of the computers\n",
+    "When data gets large, it becomes necessary and also sometimes advantageous to store data across multiple computers (or \"servers\"). Calculations that are performed on data sets that are distributed across multiple computers need to, in the end, be combined to compute a final result (where this final combination of results is often referred to as \"reduce\" operation). If one or more of the computers was offline, the contribution\n",
     "\n",
     "\n",
     "\n",
