--- a/index.ipynb
+++ b/index.ipynb
@@ -68,7 +68,7 @@
     "\n",
     "Write your answer below this line: \n",
     "_______________________________________________________________________________________________________________________________\n",
-    "\n",
+    "MapReduce is the kind of re\n",
     "\n",
     "\n",
     "\n",
