--- a/index.ipynb
+++ b/index.ipynb
@@ -68,7 +68,7 @@
     "\n",
     "Write your answer below this line: \n",
     "_______________________________________________________________________________________________________________________________\n",
-    "MapReduce is the kind of reduce operation referred to above\n",
+    "MapReduce is the kind of reduce operation referred to above - a \n",
     "\n",
     "\n",
     "\n",
