Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -68,7 +68,7 @@
     "\n",
     "Write your answer below this line: \n",
     "_______________________________________________________________________________________________________________________________\n",
-    "MapReduce is the kind of reduce operation referred to above - a combination of results from multiple computers that\n",
+    "MapReduce is the kind of reduce operation referred to above - a combination of results from multiple computers that, collectively, contain a distributed data set.\n",
     "\n",
     "\n",
     "\n",
@@ -77,6 +77,13 @@
     "\n",
     "In this lesson, we reviewed some common NoSQL interview questions. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
